--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json-server": "json-server --watch data/todos.json --port 3001"
   },
   "dependencies": {
+    "daisyui": "^4.4.20",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-icons": "^4.12.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.45",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "json-server": "^0.17.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.6"
   }
 }
